--- a/_includes/docs_contents.html
+++ b/_includes/docs_contents.html
@@ -7,8 +7,8 @@
 
     <h4>API DOCUMENTATION</h4>
     <ul>
-      <li><a href="{{ site.url }}/clojuredoc/clara.rules.html">Clojure</a></li>
-      <li><a href="{{ site.url }}/javadoc/index.html">JavaDoc</a></li>
+      <li><a href="{{ site.url }}{{site.clojuredoc}}clara.rules.html">Clojure</a></li>
+      <li><a href="{{ site.url }}{{site.javadoc}}index.html">JavaDoc</a></li>
     </ul>
   </aside>
 </div>
