Fix margin on code examples.

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -8,6 +8,8 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
+figure{margin:0.5em 0px}
+
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
