Transfer project to Cerner.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <p><center>Clara is released under the Eclipse Public License, same as Clojure.</center></p>
+    <p><center>Clara is released under the Apache License, Version 2.0</center></p>
   </div>
 
 </footer>
