--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
         <a class="page-link" href="{{ site.baseurl }}/">Home</a>
         <a class="page-link" href="{{ site.baseurl }}/docs/firststeps">Documentation</a>
         <a class="page-link" href="{{ site.baseurl }}/help/">Help</a>
-        <a class="page-link" href="https://github.com/rbrush/clara-rules">GitHub</a>
+        <a class="page-link" href="https://github.com/cerner/clara-rules">GitHub</a>
       </div>
     </nav>
 
